Egenvurdering er alltid en liste, endret fra "egenvurdering" til "egenvurderinger" i response og i profilering/egenvurderinger route
